--- a/Cours 1/index.html
+++ b/Cours 1/index.html
@@ -25,6 +25,6 @@
       <li>Développer un regard <strong>critique</strong> sur les effets négatifs des décisions de marketing et communication</li>
     </ul>
   <img src="dauphine.jpg" alt="Daudau le S">
-  <img src="https://media.giphy.com/media/1IswSSvr2N9WseOrbq/giphy.gif" >
+  <img width="20%" src="https://media.giphy.com/media/1IswSSvr2N9WseOrbq/giphy.gif" >
 </body>
 </html>
